# KeiSeiKit

./: .gitattributes  .gitignore  BACKUP-INDEX.md  CHANGELOG.md  CLEANUP-RUNTIME-SPEC.md  CONTRIBUTING.md  DECISIONS.md  HERMES-MIGRATION-PLAN.md  LICENSE  PLUGIN.md  PUBLIC-MIRROR.md  README.md  SECURITY.md  bootstrap.sh  install.sh  kei-code-implementer.md  kei-infra-implementer.md  kei-ml-implementer.md  kei-modal-runner.md  plugin.json  settings-snippet.json  web-install.sh
_primitives/_rust/: Cargo.toml
_primitives/_rust/.cargo/: config.toml
_primitives/_rust/firewall-diff/: Cargo.toml
_primitives/_rust/frustration-matrix/: Cargo.toml
_primitives/_rust/frustration-matrix/data/: README.md
_primitives/_rust/frustration-matrix/src/: categories.rs  classifier.rs  classifier_cli.rs  eval.rs  eval_gold.rs  eval_metrics.rs  eval_predict.rs  eval_report.rs  firmware.rs  firmware_corpus.rs  firmware_ngram.rs  hit.rs  jsonl.rs  lib.rs  main.rs  markdown.rs  report.rs  row.rs  scan_classifier.rs  since.rs
_primitives/_rust/frustration-matrix/tests/: classifier.rs  eval.rs  firmware.rs  integration.rs  jsonl.rs
_primitives/_rust/kei-agent-runtime/: Cargo.toml
_primitives/_rust/kei-arch-map/: Cargo.toml
_primitives/_rust/kei-arch-map/src/: main.rs  plan.rs  plan_io.rs  render.rs  runner.rs  schema.rs  verify.rs
_primitives/_rust/kei-arch-map/tests/: evidence.rs  security_fixes.rs  support.rs
_primitives/_rust/kei-artifact/: Cargo.toml
_primitives/_rust/kei-atom-discovery/: Cargo.toml
_primitives/_rust/kei-auth/: Cargo.toml
_primitives/_rust/kei-auth-apple/src/: provider.rs
_primitives/_rust/kei-auth-apple/tests/: apple_client_smoke.rs  apple_smoke.rs
_primitives/_rust/kei-auth-google/: Cargo.toml
_primitives/_rust/kei-auth-google/src/: lib.rs  provider.rs
_primitives/_rust/kei-auth-google/tests/: google_client_smoke.rs  google_smoke.rs
_primitives/_rust/kei-auth-magiclink/: Cargo.toml
_primitives/_rust/kei-brain-view/: Cargo.toml
_primitives/_rust/kei-buddy/: Cargo.toml  README.md
_primitives/_rust/kei-buddy/src/: chat_log.rs  command_exec.rs  commands.rs  conversational.rs  error.rs  extractor.rs  lib.rs  machine.rs  machine_helpers.rs  machine_tests.rs  (+13 more)
_primitives/_rust/kei-cache/: Cargo.toml
_primitives/_rust/kei-capability/: Cargo.toml
_primitives/_rust/kei-changelog/: Cargo.toml
_primitives/_rust/kei-chat-store/: Cargo.toml
_primitives/_rust/kei-cleanup/: Cargo.toml
_primitives/_rust/kei-comments/: Cargo.toml  README.md
_primitives/_rust/kei-compute-baremetal/: Cargo.toml
_primitives/_rust/kei-compute-linode/: Cargo.toml
_primitives/_rust/kei-compute-vultr/: Cargo.toml
_primitives/_rust/kei-conflict-scan/: Cargo.toml
_primitives/_rust/kei-contacts-apple/: Cargo.toml  README.md
_primitives/_rust/kei-contacts-google/: Cargo.toml  README.md
_primitives/_rust/kei-content-store/: Cargo.toml
_primitives/_rust/kei-cortex/: Cargo.toml
_primitives/_rust/kei-crossdomain/: Cargo.toml
_primitives/_rust/kei-curator/: Cargo.toml
_primitives/_rust/kei-decision/: Cargo.toml
_primitives/_rust/kei-decompose/: Cargo.toml
_primitives/_rust/kei-diff/: Cargo.toml
_primitives/_rust/kei-discover/: Cargo.toml
_primitives/_rust/kei-dna-index/: Cargo.toml
_primitives/_rust/kei-entity-store/: Cargo.toml
_primitives/_rust/kei-forge/: Cargo.toml
_primitives/_rust/kei-fork/: Cargo.toml
_primitives/_rust/kei-gdrive-import/: Cargo.toml
_primitives/_rust/kei-git-forgejo/: Cargo.toml
_primitives/_rust/kei-git-gitea/: Cargo.toml
_primitives/_rust/kei-git-gitlab/: Cargo.toml
_primitives/_rust/kei-graph-check/: Cargo.toml
_primitives/_rust/kei-hibernate/: Cargo.toml
_primitives/_rust/kei-ledger/: Cargo.toml
_primitives/_rust/kei-ledger-sign/: Cargo.toml
_primitives/_rust/kei-llm-bridge-mlx/: Cargo.toml
_primitives/_rust/kei-llm-llamacpp/: Cargo.toml
_primitives/_rust/kei-mcp/: Cargo.toml
_primitives/_rust/kei-memory/: Cargo.toml
_primitives/_rust/kei-memory-postgres/: Cargo.toml
_primitives/_rust/kei-memory-redis/: Cargo.toml
_primitives/_rust/kei-memory-sled/: Cargo.toml
_primitives/_rust/kei-memory-sqlite/: Cargo.toml
_primitives/_rust/kei-migrate/: Cargo.toml
_primitives/_rust/kei-model-router/: Cargo.toml
_primitives/_rust/kei-net-openvpn/: Cargo.toml
_primitives/_rust/kei-net-wireguard/: Cargo.toml
_primitives/_rust/kei-notify-discord/: Cargo.toml
_primitives/_rust/kei-notify-sms/: Cargo.toml
_primitives/_rust/kei-notify-telegram/: Cargo.toml
_primitives/_rust/kei-pet/: Cargo.toml
_primitives/_rust/kei-ping/: Cargo.toml
_primitives/_rust/kei-pipe/: Cargo.toml
_primitives/_rust/kei-pipeline-test/: Cargo.toml
_primitives/_rust/kei-projects-index/: Cargo.toml
_primitives/_rust/kei-projects-watcher/: Cargo.toml
_primitives/_rust/kei-provision/: Cargo.toml
_primitives/_rust/kei-prune/: Cargo.toml
_primitives/_rust/kei-refactor-engine/: Cargo.toml
_primitives/_rust/kei-replay/: Cargo.toml
_primitives/_rust/kei-router/: Cargo.toml
_primitives/_rust/kei-runtime/: Cargo.toml
_primitives/_rust/kei-runtime-core/: Cargo.toml
_primitives/_rust/kei-sage/: Cargo.toml
_primitives/_rust/kei-scheduler/: Cargo.toml
_primitives/_rust/kei-search-core/: Cargo.toml
_primitives/_rust/kei-shared/: Cargo.toml
_primitives/_rust/kei-skill-importer/: Cargo.toml
_primitives/_rust/kei-social-store/: Cargo.toml
_primitives/_rust/kei-spawn/: Cargo.toml
_primitives/_rust/kei-store/: Cargo.toml
_primitives/_rust/kei-stt/: Cargo.toml  README.md
_primitives/_rust/kei-task/: Cargo.toml
_primitives/_rust/kei-telegram-webhook/: Cargo.toml
_primitives/_rust/kei-tlog/: Cargo.toml
_primitives/_rust/kei-token-tracker/: Cargo.toml
_primitives/_rust/kei-tts/: Cargo.toml  README.md
_primitives/_rust/kei-tty/: Cargo.toml
_primitives/_rust/kei-watch/: Cargo.toml
_primitives/_rust/keisei/: Cargo.toml
_primitives/_rust/mock-render/: Cargo.toml
_primitives/_rust/ssh-check/: Cargo.toml
_primitives/_rust/tokens-sync/: Cargo.toml
_primitives/_rust/visual-diff/: Cargo.toml
(+2102 files in other folders)
