[workspace]
resolver = "2"
members = [
    "kei-ledger",
    "kei-migrate",
    "kei-changelog",
    "ssh-check",
    "firewall-diff",
    "mock-render",
    "visual-diff",
    "tokens-sync",
    "kei-memory",
    "kei-conflict-scan",
    "kei-refactor-engine",
    "kei-graph-check",
    "kei-store",
    # v0.14 LBM port — 10 new MCP-core primitives
    "kei-router",
    "kei-sage",
    "kei-task",
    "kei-chat-store",
    "kei-crossdomain",
    "kei-search-core",
    "kei-content-store",
    "kei-social-store",
    "kei-curator",
    "kei-auth",
    # v0.15 artifact handoff pipeline
    "kei-artifact",
    # v0.18 exobrain CLI
    "keisei",
    # v1 substrate — local web wizard for scaffolding atoms (Stream A)
    "kei-forge",
    # v1 substrate — atom invocation runtime + schema linter (Stream D)
    "kei-runtime",
    # v1 substrate — shared atom discovery + frontmatter + safe path (Stream E)
    "kei-atom-discovery",
    # agent substrate v1 — phase 3 runtime (Capability trait + registry + compose/spawn/verify)
    "kei-agent-runtime",
    # agent substrate v1 — phase 3 hook-protocol CLI adapter
    "kei-capability",
    # v0.24 unification — unified VPS provisioner (supersedes provision-{hetzner,vultr}.sh)
    "kei-provision",
    # Convergence Layer A — schema-driven verb-template engine for SQLite-CRUD stores
    "kei-entity-store",
    # v1 substrate — atom DAG pipe runtime (topo-sort + JSON piping between atoms)
    "kei-pipe",
    # v1 substrate — deterministic result cache for pure (query/transform) atoms
    "kei-cache",
    # agent substrate v1 — automation envelope: prepare + ledger fork + verify
    "kei-spawn",
    # agent substrate v1 — reconstruct spawn from DNA (ledger row + task.toml + recompose)
    "kei-replay",
    # v0.29 Wave 13 — structural JSON diff primitive (RFC 6902 subset add/remove/replace)
    "kei-diff",
    # v0.29 Wave 13 — durable task scheduler (cron / at / interval) metadata primitive
    "kei-scheduler",
    # v0.29 Wave 13 — filesystem watcher primitive (thin notify wrapper, sync API)
    "kei-watch",
    # v0.30 Wave 14 — bio-inspired pruning (retire idle agents)
    "kei-prune",
    # v0.30 Wave 14 — federated marketplace discovery stub
    "kei-discover",
    # v0.30 Wave 14 — taxonomy graph + lineage stdout visualizer
    "kei-brain-view",
    # v0.30 Wave 14 — whole-brain tar.zst export/import
    "kei-hibernate",
    # v0.30 Wave 14 — ed25519 creator attestation
    "kei-ledger-sign",
    # v0.31 Wave 15 — managed git worktree + ledger lifecycle (fork/collect/gc/rescue)
    "kei-fork",
    # v0.34 Wave 17 — SSoT for DNA format + shared substrate types
    "kei-shared",
    # v0.32 Wave 15 — read-only DNA adjacency/cluster/precedent over kei-ledger
    "kei-dna-index",
    # Pet UI v1 — persona manifest parse/validate + Ed25519 identity + overlay renderer
    "kei-pet",
    # v0.37 Wave 20 — local HTTP daemon (axum) exposing cortex state for web UI at keisei.app
    "kei-cortex",
    # v0.39 Wave 25 — longitudinal user-frustration matrix (regex + byte n-gram firmware classifier)
    "frustration-matrix",
    # Wave 26.5 — universal external skill-format importer (OpenClaw/Cline/Cursor/Claude/Kimi)
    "kei-skill-importer",
    # v0.40 Wave 31 — terminal UI client for kei-cortex daemon (ratatui + crossterm)
    "kei-tty",
    # Wave 36 — Model Context Protocol stdio JSON-RPC server (atom registry + skills as resources)
    "kei-mcp",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_yaml_ng = "0.10"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
thiserror = "1"
tempfile = "3"
toml = "0.8"
flate2 = "1"
walkdir = "2"
pretty_assertions = "1"
# Shared async + HTTP deps (Waves 31/32/33/35/36 etc — kei-tty / kei-router / etc)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "process", "fs", "io-util", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
bytes = "1"
async-trait = "0.1"
wiremock = "0.6"
# Wave 38a — daemon integration deps (PTY for /term WS endpoint, tungstenite for axum WS)
portable-pty = "0.8"
tokio-tungstenite = "0.24"
# Wave 44a — tool-sandbox hardening (shell tokenization, URL parsing, bounded LRU)
shell-words = "1"
url = "2"
lru = "0.12"
# Wave 44b — atomic O_NOFOLLOW openat for symlink-safe writes (tool_apply.rs)
nix = { version = "0.29", default-features = false, features = ["fs"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
