[package]
name = "kei-pipeline-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "End-to-end integration test of cleanup → derive → arch-map pipeline."
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[package.metadata.keisei]
trait = "PipelineE2E"
description = "Integration test crate for cleanup→derive→arch-map full chain. Constructor Pattern: 1 crate, 1 responsibility."
