[package]
name = "keisei"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Exobrain attach/status CLI — mounts a portable brain (memory + manifests + artifacts + MCP bin) into an AI client (MVP: Claude Code)"

[[bin]]
name = "keisei"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"
thiserror = "2"
regex = { workspace = true }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
